2007-11-29	Till Straumann <strauman@slac.stanford.edu>

	* shared/include/cpuIdent.h, shared/include/cpuIdent.c:
	Added a simple 'feature check' facility. Code should
	not check for a particular CPU type if possible but
	check the respective feature bit (e.g., 'has_altivec').
	This makes it much less cumbersome to add more CPU
	types in the future.

2007-11-29	Till Straumann <strauman@slac.stanford.edu>

	* mpc6xx/mmu/bat.c, mpc6xx/mmu/bat.h: Added support
	for setting & reading IBATs.

2007-11-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* ppc403/clock/clock.c: Now compiles and links.

2007-11-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* mpc5xx/clock/clock.c, mpc5xx/timer/timer.c, mpc8260/clock/clock.c,
	mpc8260/cpm/brg.c, mpc8260/timer/timer.c, mpc8xx/clock/clock.c,
	mpc8xx/console-generic/console-generic.c, mpc8xx/timer/timer.c,
	new-exceptions/raw_exception.c, old-exceptions/cpu.c,
	ppc403/clock/clock.c, ppc403/console/console.c,
	ppc403/console/console.c.polled, ppc403/console/console405.c,
	ppc403/ictrl/ictrl.c, ppc403/irq/ictrl.c, ppc403/timer/timer.c,
	ppc403/tty_drv/tty_drv.c: Eliminate PowerPC specific elements from
	the CPU Table. They have been replaced with variables named bsp_XXX
	as needed.

2007-11-28	Till Straumann <strauman@slac.stanford.edu>

	* shared/src/cache.c: removed redundant mpc8xx versions
	of flush/invalidate 1 cache line routines.

2007-11-13	Till Straumann <strauman@slac.stanford.edu>

	* shared/src/cache.c: moved generic operations
	(flush/invalidate 1 data line, invalidate 1 inst. line)
	from #ifdef <cpu_flavor> to general section (all CPUs).

2007-11-13	Till Straumann <strauman@slac.stanford.edu>

	* shared/src/cache_.h: include <libcpu/cache.h> only
	#ifdef _OLD_EXCEPTIONS - no need for <libcpu/cache.h>
	otherwise.

2007-11-13	Till Straumann <strauman@slac.stanford.edu>
	
	* shared/include/byteorder.h: fixed wrong pointer-type
	of ld_le32() (uint16_t* -> uint32_t*).

2007-11-06	Till Straumann <strauman@slac.stanford.edu>
